# ec-su_axb35-win

./: .gitignore  .rooignore  README.md  installer.nsi
client/: Cargo.toml  build.rs  ec-su_axb35-win.pbp  main.pb
client/src/: main.rs
ec-probe-poc/: Cargo.toml
ec-probe-poc/src/: main.rs
server/: Cargo.toml  build.rs  openapi.yaml
server/scripts/: info.ps1  test_fan_mode_fixed.ps1
server/src/: config.rs  driver.rs  ec.rs  logger.rs  main.rs
