[package]
name = "ec-su_axb35-server"
version = "1.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
winapi = { version = "0.3", features = ["winnt", "winerror", "handleapi", "fileapi", "ioapiset", "minwinbase", "errhandlingapi", "winsvc", "winbase", "processthreadsapi", "securitybaseapi", "winuser", "consoleapi", "processenv"] }
windows-service = "0.6"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
debug = false